[package]
name = "rust-arduino-03-love-o-meter"
version = "0.1.0"
authors = ["McKay Broderick <mckay.db@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
